portico: Fix styling of dropdown menu in nav bar.
The previous gradient must have been from a previous design; it looked kind
of crazy against our current homepage. This widget also appears on /help,
/integrations, and other pages with a variety of different backgrounds, so a
neutral, muted style is probably safest.

The icon change is just because fa-off seems to be broken/missing. Maybe it
was in Font Awesome 3?

The extra padding line is to supercede padding (I assume) unintentionally
added by `.top-links a` to this widget on /help.

--- a/static/styles/portico.scss
+++ b/static/styles/portico.scss
@@ -806,13 +806,14 @@ input.text-error {
 }
 
 .portico-header .dropdown ul li:hover {
-    background: linear-gradient(to bottom, hsl(163, 92%, 39%), hsl(200, 100%, 35%));
+    background-color: hsl(190, 10%, 90%);
     transition: none;
 }
 
 .portico-header .dropdown ul li a {
     display: block;
     margin: 2px 0px;
+    padding: 0px;
 
     transition: none;
     font-size: 0.9em;
@@ -823,7 +824,6 @@ input.text-error {
 
 .portico-header .dropdown ul li:hover a {
     background-color: transparent;
-    color: hsl(0, 0%, 100%);
 }
 
 .portico-header .dropdown ul li a i {
